force-app/main/default/objects/B2B_CartItems__c/B2B_CartItems__c.object-meta.xml
<CustomObject>
    <description>This object holds the different cart items present in cart</description>
    <label>VS/RX Cart Items</label>
    <nameField>
        <label>Cart Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VS/RX Cart Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>