force-app/main/default/objects/B2B_CartItems__c/fields/B2B_Cart__c.field-meta.xml
<CustomField>
    <fullName>B2B_Cart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup holds the Cart associated to this custom cart item.</description>
    <label>Cart</label>
    <referenceTo>WebCart</referenceTo>
    <relationshipLabel>VS/RX Cart Items</relationshipLabel>
    <relationshipName>VS_RX_Cart_Items</relationshipName>
    <type>Lookup</type>
</CustomField>