force-app/main/default/objects/B2B_CartItems__c/fields/B2B_Parent_Cart_Item__c.field-meta.xml
<CustomField>
    <fullName>B2B_Parent_Cart_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup holds the parent cart item of frame to which this VS RX Cart Item is linked with</description>
    <label>Parent Cart Item</label>
    <referenceTo>CartItem</referenceTo>
    <relationshipLabel>VS/RX Cart Items</relationshipLabel>
    <relationshipName>VS_RX_Cart_Items</relationshipName>
    <type>Lookup</type>
</CustomField>