force-app/main/default/objects/B2B_CartItems__c/fields/B2B_Product__c.field-meta.xml
<CustomField>
    <fullName>B2B_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup holds the product associated to this custom cart item.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>VS/RX Cart Items</relationshipLabel>
    <relationshipName>VS_RX_Cart_Items</relationshipName>
    <type>Lookup</type>
</CustomField>