force-app/main/default/objects/B2B_CartItems__c/fields/B2B_Quantity__c.field-meta.xml
<CustomField>
    <fullName>B2B_Quantity__c</fullName>
    <description>This field holds the quantity associated with the cart item.</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>