force-app/main/default/objects/B2B_CartItems__c/fields/B2B_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>B2B_Unit_Price__c</fullName>
    <description>This field holds the unit price of the product associated in the cart item.</description>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>